--- a/templates/home.html
+++ b/templates/home.html
@@ -88,7 +88,7 @@
         <a href="/login" class="button">Check In</a>
     </div>
     <footer>
-        © 2024 Friend Recommendation System | Designed with 💖 by Madhav
+        © 2024 Friend Recommendation System | Designed with 💖 by MAHV
     </footer>
 </body>
 </html>
